--- a/reviews/templates/reviews/login.html
+++ b/reviews/templates/reviews/login.html
@@ -28,7 +28,7 @@
     </form>
     </div>
     <div id="signin">
-        <p>Inscrivez-vous maintenant <a href="{% url 'login' %}">S'inscrire</a></p>
+        <p>Inscrivez-vous maintenant <a href="{% url 'signup' %}">S'inscrire</a></p>
     </div>
 </body>
 </html>
